notoriOS.cydsn/BUILD.log
--------------- Build Started: 07/05/2022 11:56:15 Project: notoriOS, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
python ../build_tools/get_commit_hash.py
0e7df3f9bf67d2b0c71edf207b1a083d428e491e 6233e3c76dfea0fccf89559d7f80f59dddfddebd Travis Adrian Dantzer <47285626+dantzert@users.noreply.github.com> 1656610745 -0400
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/level_sensor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c level_sensor.c -o .\CortexM3\ARM_GCC_541\Debug\level_sensor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/sd_card.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c sd_card.c -o .\CortexM3\ARM_GCC_541\Debug\sd_card.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/voltages.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c voltages.c -o .\CortexM3\ARM_GCC_541\Debug\voltages.o
voltages.c: In function 'pressure_sensor_readings':
voltages.c:65:11: warning: unused variable 'channels' [-Wunused-variable]
     float channels[AMux_CHANNELS];
           ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/modem.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c modem.c -o .\CortexM3\ARM_GCC_541\Debug\modem.o
modem.c: In function 'get_cell_network_stats':
modem.c:443:9: warning: unused variable 'match' [-Wunused-variable]
     int match = sscanf(uart_received_string,"\r\n+CESQ: %d,%d,%d,%d,%d,%d%*s",
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/data.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c data.c -o .\CortexM3\ARM_GCC_541\Debug\data.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/influx.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c influx.c -o .\CortexM3\ARM_GCC_541\Debug\influx.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/App_LED.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c App_LED.c -o .\CortexM3\ARM_GCC_541\Debug\App_LED.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/downstream_level_sensor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c downstream_level_sensor.c -o .\CortexM3\ARM_GCC_541\Debug\downstream_level_sensor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/valve.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c valve.c -o .\CortexM3\ARM_GCC_541\Debug\valve.o
valve.c: In function 'valve_test':
valve.c:70:20: error: 'voltage_t {aka struct <anonymous>}' has no member named 'voltage_valve_pos'
         voltages[0].voltage_valve_pos, voltages[1].voltage_valve_pos, voltages[0].voltage_valve_pot_power,
                    ^
valve.c:70:51: error: 'voltage_t {aka struct <anonymous>}' has no member named 'voltage_valve_pos'
         voltages[0].voltage_valve_pos, voltages[1].voltage_valve_pos, voltages[0].voltage_valve_pot_power,
                                                   ^
valve.c:70:82: error: 'voltage_t {aka struct <anonymous>}' has no member named 'voltage_valve_pot_power'
         voltages[0].voltage_valve_pos, voltages[1].voltage_valve_pos, voltages[0].voltage_valve_pot_power,
                                                                                  ^
valve.c:36:15: warning: variable 'voltages' set but not used [-Wunused-but-set-variable]
     voltage_t voltages[8];
               ^
valve.c: In function 'read_Valve_pos':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
valve.c:93:21: error: 'voltage_t {aka struct <anonymous>}' has no member named 'voltage_valve_pos'
     return (readings.voltage_valve_pos/readings.voltage_valve_pot_power)/0.94; // divide because of the non-potentiometer resistance
                     ^
valve.c:93:48: error: 'voltage_t {aka struct <anonymous>}' has no member named 'voltage_valve_pot_power'
     return (readings.voltage_valve_pos/readings.voltage_valve_pot_power)/0.94; // divide because of the non-potentiometer resistance
                                                ^
valve.c:92:15: warning: variable 'readings' set but not used [-Wunused-but-set-variable]
     voltage_t readings = voltage_take_readings();
               ^
valve.c:96:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
--------------- Build Failed: 07/05/2022 11:56:19 ---------------
